# get

2sem_lab1/part_0/: CMakeLists.txt
2sem_lab1/part_0/linalg/: CMakeLists.txt  matrix.cpp  matrix.hpp  matrix.tpp  subvector.cpp  subvector.hpp  subvector.tpp
2sem_lab1/part_0/tests/matrix_tests/: CMakeLists.txt  matrix_test.cpp  test_constructors.cpp  test_determinant.cpp  test_operators.cpp  test_solve.cpp
2sem_lab1/part_0/tests/subvector_tests/: CMakeLists.txt  subvector_test.cpp  test_advanced.cpp  test_constructors.cpp  test_modifications.cpp  test_operations.cpp
2sem_lab1/yet_another_educational_cowsay/: CMakeLists.txt
lab2/: foo  main.cpp  matrix.h  subforwardlist.h  subvector.h
scripts/: 1.cpp  4-1-dac.py  4-3-pwmm.py  5-1-adc-simple.py  5-2-adc-sar.py  5-3-adc-volume.py  7-1.py  graph.py  matrix.h  measure.py
